# studies_ll_prog_warship

./: CMakeLists.txt  board.c  board.h  main.c  rules.c  rules.h  setter.c  setter.h  translation.c  translation.h
